# jupyterlab-lsp

./: .git-blame-ignore-revs  .gitignore  .jupyter-releaser.toml  .prettierignore  .readthedocs.yml  .travis  .travis.yml  .yarnrc  .yarnrc.yml  CHANGELOG.md  CONTRIBUTING.md  EXTENDING.md  JEP.md  LANGUAGESERVERS.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  ROADMAP.md  azure-pipelines.yml  codeql-analysis.yml  dodo.py  environment-atest.yml  environment-docs.yml  environment-lint.yml  environment.yml  install_r_server.sh  jest.config.js  jupyter_notebook_config.py  lerna.json  package.json  postBuild  pyproject.toml  requirements-atest.txt  requirements-dev.txt  requirements-docs.txt  requirements-lab.txt  requirements-test.txt  requirements-utest.txt  requirements.txt  (+9 more)
.github/: .condarc  pull_request_template.md  usage.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_request.md  feature_request.md  intent_to_implement.md  language_server_builtin.md  language_server_byo.md
.github/workflows/: actions.yml  binder-badge.yaml  check-release.yml  codeql-analysis.yml  env_template.py  job.lint.yml  job.test.yml
atest/: 00_Smoke.robot  01_Editor.robot  02_Settings.robot  03_Notebook.robot  04_Interface.robot  06_Style.robot  07_Configuration.robot  Keywords.resource  Keywords.robot  Ports.py  README.md  Variables.resource  Variables.robot  __init__.robot  config.py  diagnostics.py  logcheck.py  mouse_over_extension.py  mouse_over_with_modifier.py  ports.py
atest/04_Interface/: BackendFailure.robot  DiagnosticsPanel.robot  Statusbar.robot
atest/05_Features/: Completion.robot  Configuration.robot  Diagnostics.robot  Highlights.robot  Hover.robot  Jump.robot  Signature.robot  Syntax_highlighting.robot
atest/07_Settings/: Completion_form.robot  Completion_themes.robot  Diagnostics.robot
atest/_examples/: Foreign extractors.ipynb  Panel.ipynb  Signature.ipynb  Syntax highlighting.ipynb  example.css  example.jl  example.json  example.jsx  example.md  example.plain  example.scss  example.sql  jump_b.py
atest/_fixtures/: jupyter_server_config.json  jupyter_server_config.py  overrides.json
atest/_libraries/: firefox.py  logcheck.py  paths.py
atest/_resources/: Keywords.resource  Variables.resource
atest/examples/: Code overrides.ipynb  Completion.ipynb  Diagnostic.ipynb  Dockerfile  Empty.ipynb  Foreign extractors.ipynb  Highlights.ipynb  Hover.ipynb  Medium_long_notebook.ipynb  Panel.ipynb  Python.ipynb  Signature.ipynb  Syntax highlighting.ipynb  completion.R  completion.py  composer-schema.yaml  config-schema.yaml  example.R  example.js  example.less  example.py  example.robot  example.sh  example.tex  example.ts  example.tsx  example.yaml  jump.py  jump_a.py  jump_references.py  (+1 more)
binder/: environment.yml  overrides.json  postBuild
ci/: env-test.yml.in  env_template.py  job.combine.yml  job.docs.yml  job.lint.yml  job.test.yml  steps.conda.yml  steps.mamba.yml
docs/: Architecture.ipynb  CHANGELOG.ipynb  Configuration.ipynb  Configuring.ipynb  Contributing.ipynb  EXTENDING.md  Extending.ipynb  Installation.ipynb  LANGUAGESERVERS.md  Language Servers.ipynb  RELEASE.md  ROADMAP.md  Releasing.ipynb  Roadmap.ipynb  Third Party Language Servers.md  conf.py  index.ipynb  markdown.py  rtd.yml  versions.py
examples/: Magics_and_rpy2.ipynb  Python.ipynb
python_packages/jupyter_lsp/: MANIFEST.in  README.md  setup.cfg  setup.py
python_packages/jupyter_lsp/jupyter_lsp/: _version.py  connection.py  constants.py  handlers.py  manager.py  serverextension.py  session.py  stdio.py  types.py  utils.py  virtual_documents_shadow.py
python_packages/jupyter_lsp/jupyter_lsp/schema/: schema.json
python_packages/jupyter_lsp/jupyter_lsp/specs/: __init__.py  basedpyright.py  bash_language_server.py  dockerfile_language_server_nodejs.py  gopls.py  javascript_typescript_langserver.py  julia_language_server.py  pyls.py  pyrefly.py  pyright.py  python_lsp_server.py  r_languageserver.py  sql_language_server.py  typescript_language_server.py  unified_language_server.py  utils.py  vscode_css_languageserver.py  vscode_html_languageserver.py  vscode_json_languageserver.py  vscode_markdown_languageserver.py  yaml_language_server.py
python_packages/jupyter_lsp/jupyter_lsp/specs/config/: README.md  basedpyright.schema.json  bash-language-server.schema.json  dockerfile-language-server-nodejs.schema.json  julia-language-server.schema.json  pylsp.schema.json  pyright.schema.json  sql-language-server.schema.json  texlab.schema.json  yaml-language-server.schema.json
python_packages/jupyter_lsp/jupyter_lsp/tests/: conftest.py  test_auth.py  test_bad_spec.py  test_detect.py  test_extension.py  test_listener.py  test_paths.py  test_reader.py  test_session.py  test_stdio.py  test_virtual_documents_shadow.py
python_packages/jupyter_lsp/src/: __init__.py  virtual_documents_shadow.py
python_packages/jupyter_lsp/src/specs/config/: dockerfile-language-server-nodejs.schema.json
python_packages/jupyter_lsp/src/tests/: test_extension.py
python_packages/jupyterlab_lsp/: MANIFEST.in  README.md  install.json  setup.cfg  setup.py
python_packages/jupyterlab_lsp/jupyterlab_lsp/: __init__.py  _paths.py  _version.py  install.json
python_packages/jupyterlab_lsp/src/: __init__.py  _paths.py  _version.py
python_packages/klingon_ls_specification/: setup.cfg  setup.py
python_packages/klingon_ls_specification/klingon_ls_specification/: __init__.py
requirements/: atest.txt  atest.yml  ci.yml  dev.txt  docs.txt  docs.yml  github-actions.yml  lab.txt  lab.yml  lint.yml  lock.yml  minimal.yml  no-lab.yml  prod.txt  utest.txt  utest.yml  win.yml
schema/: plugin.json
scripts/: atest.py  bump_versions.py  combine.py  distcheck.py  docs.py  dodo.py  integrity.py  jedi_cache.py  lint.py  lock.py  nblint.py  publish_pypi.sh  report.py  tectonic_cache.py  utest.py
src/: command_manager.spec.ts  command_manager.ts  completion.ts  connection.ts  connection_manager.ts  converter.ts  free_tooltip.ts  index.ts  lsp.ts  notebook_mapper.ts  notebook_private.ts  positioning.ts  utils.ts
style/: index.css
(+147 files in other folders)
