[metadata]
name = jupyter_lsp
version = 0.5.0
description = proxy configuration for Language Servers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/krassowski/jupyterlab-lsp/issues
author = Michał Krassowski
license = BSD-3-Clause
keywords =
    Interactive
license_file = LICENSE
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Programming Language :: Python

[options]
install_requires =
    python-jsonrpc-server
    notebook
package_dir =
    = py_src
packages = find:
include_package_data = True
zip_safe = False

tests_require =
    pytest
    pytest-cov

[options.packages.find]
where =
    py_src

[options.entry_points]
jupyter_lsp_spec_v0 =
    dockerfile-language-server-nodejs = jupyter_lsp.specs:dockerfile
    javascript-typescript-langserver = jupyter_lsp.specs:ts
    pyls = jupyter_lsp.specs:py
    unified-language-server = jupyter_lsp.specs:md
    vscode-css-languageserver-bin = jupyter_lsp.specs:css
    vscode-html-languageserver-bin = jupyter_lsp.specs:html
    vscode-json-languageserver-bin = jupyter_lsp.specs:json
    yaml-language-server = jupyter_lsp.specs:yaml

[aliases]
test = pytest

[flake8]
exclude = .git,__pycache__,envs,.ipynb_checkpoints,.mypy_cache
max-line-length = 88

[tool:pytest]
addopts =
    --pyargs jupyter_lsp
    --cov jupyter_lsp
    --cov-report term-missing:skip-covered
    -p no:warnings
    --flake8

[isort]
combine_as_imports = True
include_trailing_comma = True
line_length = 88
multi_line_output = 3
