[metadata]
name = jupyter-lsp
description = Multi-Language Server WebSocket proxy for your Jupyter notebook or lab server for Python 3.5+.
url = https://github.com/krassowski/jupyterlab-lsp
author = jupyter-lsp Contributors
author_email = krassowski.michal+pypi@gmail.com
license = BSD-3-Clause
keywords =
    Interactive
    Language Server
    LSP
license_file = LICENSE
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Programming Language :: Python

[options]
install_requires =
    notebook
package_dir =
    = py_src
packages = find:
include_package_data = True
zip_safe = False

tests_require =
    pytest
    pytest-cov

[options.packages.find]
where =
    py_src

[options.entry_points]
jupyter_lsp_spec_v0 =
    bash-language-server = jupyter_lsp.specs:bash
    dockerfile-language-server-nodejs = jupyter_lsp.specs:dockerfile
    javascript-typescript-langserver = jupyter_lsp.specs:ts
    pyls = jupyter_lsp.specs:py
    unified-language-server = jupyter_lsp.specs:md
    vscode-css-languageserver-bin = jupyter_lsp.specs:css
    vscode-html-languageserver-bin = jupyter_lsp.specs:html
    vscode-json-languageserver-bin = jupyter_lsp.specs:json
    yaml-language-server = jupyter_lsp.specs:yaml
    r-languageserver = jupyter_lsp.specs:r

[aliases]
test = pytest

[flake8]
exclude = .git,__pycache__,envs,.ipynb_checkpoints,.mypy_cache
max-line-length = 88

[tool:pytest]
addopts =
    --pyargs jupyter_lsp
    --cov jupyter_lsp
    --cov-report term-missing:skip-covered
    -p no:warnings
    --flake8

[isort]
combine_as_imports = True
include_trailing_comma = True
line_length = 88
multi_line_output = 3

[pycodestyle]
ignore = E203,W503
max-line-length = 88
