[metadata]
name = jupyter-lsp
description = Multi-Language Server WebSocket proxy for Jupyter notebook or lab server for Python 3.5+.
long_description = file: ./py_src/jupyter_lsp/README.md
long_description_content_type = text/markdown
url = https://github.com/krassowski/jupyterlab-lsp
author = jupyter-lsp Contributors
author_email = krassowski.michal+pypi@gmail.com
license = BSD-3-Clause
keywords =
    Interactive
    Language Server
    LSP
license_file = LICENSE
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Programming Language :: Python

[options]
package_dir =
    = py_src

packages = find:
include_package_data = True
zip_safe = False

install_requires =
    notebook >=4.3.1
    setuptools

[options.packages.find]
where =
    py_src

[options.entry_points]
jupyter_lsp_spec_v1 =
    bash-language-server = jupyter_lsp.specs:bash
    dockerfile-language-server-nodejs = jupyter_lsp.specs:dockerfile
    javascript-typescript-langserver = jupyter_lsp.specs:ts
    python-language-server = jupyter_lsp.specs:py
    unified-language-server = jupyter_lsp.specs:md
    vscode-css-languageserver-bin = jupyter_lsp.specs:css
    vscode-html-languageserver-bin = jupyter_lsp.specs:html
    vscode-json-languageserver-bin = jupyter_lsp.specs:json
    yaml-language-server = jupyter_lsp.specs:yaml
    r-languageserver = jupyter_lsp.specs:r

[aliases]
test = pytest

[flake8]
exclude = .git,__pycache__,envs,.ipynb_checkpoints,.mypy_cache
max-line-length = 88

[tool:pytest]
addopts =
    --pyargs jupyter_lsp
    --cov jupyter_lsp
    --cov-report term-missing:skip-covered
    -p no:warnings
    --flake8

[isort]
combine_as_imports = True
include_trailing_comma = True
line_length = 88
multi_line_output = 3

[pycodestyle]
ignore = E203,W503
max-line-length = 88

[mypy-traitlets.*]
ignore_missing_imports = True

[mypy-notebook]
ignore_missing_imports = True

[mypy-jupyterlab.*]
ignore_missing_imports = True

[mypy-notebook.*]
ignore_missing_imports = True

[mypy-pytest]
ignore_missing_imports = True

[mypy-setuptools]
ignore_missing_imports = True

[mypy-ctypes.*]
ignore_missing_imports = True

[mypy-robot.*]
ignore_missing_imports = True

[mypy-jsonschema]
ignore_missing_imports = True

[mypy-ruamel.*]
ignore_missing_imports = True

[mypy-ruamel_yaml]
ignore_missing_imports = True

[mypy-jupyter_lsp.non_blocking]
ignore_errors = True
