[metadata]
name = jupyter-lsp
description = Multi-Language Server WebSocket proxy for Jupyter Notebook/Lab server
long_description = file: ./README.md
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = https://github.com/jupyter-lsp/jupyterlab-lsp/issues
    Documentation = https://jupyterlab-lsp.readthedocs.io/
    Source Code = https://github.com/jupyter-lsp/jupyterlab-lsp
author = jupyter-lsp Contributors
author_email = project.jupyter@gmail.com
license = BSD-3-Clause
keywords =
    Interactive
    Language Server
    LSP
license_file = LICENSE
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Programming Language :: Python

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.7

install_requires =
    jupyter_server >=1.1.2
    entrypoints

[options.entry_points]
jupyter_lsp_spec_v1 =
    bash-language-server = jupyter_lsp.specs:bash
    dockerfile-language-server-nodejs = jupyter_lsp.specs:dockerfile
    javascript-typescript-langserver = jupyter_lsp.specs:ts_old
    jedi-language-server = jupyter_lsp.specs:jedi
    julia-language-server = jupyter_lsp.specs:julia
    python-language-server = jupyter_lsp.specs:py_palantir
    python-lsp-server = jupyter_lsp.specs:py_lsp_server
    pyright = jupyter_lsp.specs:pyright
    r-languageserver = jupyter_lsp.specs:r
    texlab = jupyter_lsp.specs:tex
    typescript-language-server = jupyter_lsp.specs:ts
    sql-language-server = jupyter_lsp.specs:sql
    unified-language-server = jupyter_lsp.specs:md
    vscode-css-languageserver-bin = jupyter_lsp.specs:css
    vscode-html-languageserver-bin = jupyter_lsp.specs:html
    vscode-json-languageserver-bin = jupyter_lsp.specs:json
    yaml-language-server = jupyter_lsp.specs:yaml

[tool:pytest]
junit_family=xunit2
addopts =
    --pyargs jupyter_lsp
    --cov jupyter_lsp
    --cov-report term-missing:skip-covered
    -p no:warnings
    --flake8
