[metadata]
name = jupyterlab-lsp
description = Language Server Protocol integration for JupyterLab
long_description = file: ./README.md
long_description_content_type = text/markdown
url = https://github.com/krassowski/jupyterlab-lsp
author = JupyterLab-LSP Development Team
license = BSD-3-Clause
keywords =
    Interactive
    Language Server
    LSP
    JupyterLab
    JupyterLab3
license_file = LICENSE
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Programming Language :: Python

[options]
package_dir =
    = src

packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.6

install_requires =
    jupyter_lsp >=1.0.0
    jupyterlab >=3.0.0, <4.0.0
    setuptools

[options.packages.find]
where =
    src

[aliases]
test = pytest

[flake8]
exclude = .git,__pycache__,envs,.ipynb_checkpoints,.mypy_cache
max-line-length = 88
ignore = E203

[tool:pytest]
junit_family=xunit2
addopts =
    --pyargs jupyter_lsp
    --cov jupyter_lsp
    --cov-report term-missing:skip-covered
    -p no:warnings
    --flake8

[isort]
profile = black
multi_line_output = 3
known_first_party = jupyterlab_lsp

[pycodestyle]
ignore = E203,W503,C0330
max-line-length = 88
