[metadata]
name = jupyterlab-lsp
description = Coding assistance for JupyterLab with Language Server Protocol
long_description = file: ./README.md
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = https://github.com/krassowski/jupyterlab-lsp/issues
    Documentation = https://jupyterlab-lsp.readthedocs.io/
    Source Code = https://github.com/krassowski/jupyterlab-lsp
author = JupyterLab-LSP Development Team
author_email = krassowski.michal+pypi@gmail.com
license = BSD-3-Clause
keywords =
    Interactive
    Language Server
    LSP
    JupyterLab
    JupyterLab3
license_file = LICENSE
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Programming Language :: Python

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.6

install_requires =
    jupyter_lsp >=1.4.0
    jupyterlab >=3.0.0,<4.0.0a0
