[metadata]
name = klingon-ls-specification
version = 0.0.0
description = Klingon language server specification for testing behaviour with non-installed language servers
author = JupyterLab-LSP Development Team

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    jupyter_lsp >=1.1.0

[options.entry_points]
jupyter_lsp_spec_v1 =
    jupyter-klingon-language-server = klingon_ls_specification:SPECS
